k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web # the component that the deployment will manage
  template: # pod template
    metadata:
      labels:
        component: web # how the deployment identifies what pod to manage
    spec:
      containers:
        - name: client
          image: mparaskakis/multi-client
          ports:
            - containerPort: 3000 #the port that is mapped to the multi-client image
