k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector: # selector to reference a particular pod
    matchLabels:
      component: worker
  template: # pod template
    metadata:
      labels: # podlabel
        component: worker
    spec:
      containers:
        - name: worker
          image: mparaskakis/multi-worker
