k8s/ingress-service.yaml
# this service automatically listens on port 80 and 443
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # additional config options for service created
    kubernetes.io/ingress.class: nginx # create controller based on specific nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # removes the matched URI and carries forward the remaining URI
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
